# DocMind---AI-Document-Assistant

./: .gitignore  README.md  app.py  pyproject.toml
core/: chain.py  embedder.py  loader.py
