[project]
name = "1st-project"
version = "0.1.0"
description = "An AI-powered document assistant using RAG"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.5",
    "faiss-cpu>=1.13.2",
    "langchain>=1.2.13",
    "langchain-classic>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.1",
    "langchain-text-splitters>=1.1.1",
    "pypdf>=6.9.2",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.3.0",
    "streamlit>=1.55.0",
]
